--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,2 @@
-### IDE ###
-nbproject/
-.idea/
-
-### General ###
-*.log
-cache.properties
-
-### CI ###
-.build/bin/
-.build/logs/
-.build/var/
-.build/vendor/
-.build/web/
-coverage.xml
+/vendor
+/public
