--- a/composer.json
+++ b/composer.json
@@ -22,35 +22,41 @@
     "config": {
         "optimize-autoloader": true,
         "apcu-autoloader": true,
-        "vendor-dir": ".build/vendor",
-        "bin-dir": ".build/bin",
         "sort-packages": true,
         "allow-plugins": {
             "typo3/cms-composer-installers": true,
             "typo3/class-alias-loader": true,
+            "phpstan/extension-installer": true,
             "dealerdirect/phpcodesniffer-composer-installer": true
         }
     },
     "require": {
         "php": "^8.2",
-	    "getbrevo/brevo-php": "2.0.0",
-        "typo3/cms-core": "^12.4 | ^11.5"
+        "getbrevo/brevo-php": "^2.0",
+        "typo3/cms-core": "^12.4 | ^11.5",
+        "typo3/cms-form": "^12.4"
     },
     "require-dev": {
-        "slevomat/coding-standard": "^8.14",
-        "squizlabs/php_codesniffer": "^3.8"
+        "phpstan/extension-installer": "^1.4",
+        "phpstan/phpstan": "^1.12",
+        "remind/coding-standard": "^1.0",
+        "saschaegerer/phpstan-typo3": "^1.10",
+        "squizlabs/php_codesniffer": "^3.7"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
     "extra": {
         "typo3/cms": {
-            "cms-package-dir": "{$vendor-dir}/typo3/cms",
-            "web-dir": ".build/web",
             "extension-key": "rmnd_brevo"
         }
     },
     "scripts": {
-        "phpcs": "@php ./.build/bin/phpcs --standard=.build/phpcs.xml --extensions=php --ignore=.build --report=full -n .",
-        "phpcbf": "@php ./.build/bin/phpcbf --standard=.build/phpcs.xml --extensions=php --ignore=.build ."
+        "phpcs": "@php ./vendor/bin/phpcs --standard=phpcs.xml --extensions=php --report=full -n .",
+        "phpcbf": "@php ./vendor/bin/phpcbf --standard=phpcs.xml --extensions=php .",
+        "phpstan": "@php ./vendor/bin/phpstan analyse -c phpstan.neon",
+        "static-analysis": [
+            "@composer phpcs",
+            "@composer phpstan"
+        ]
     }
 }
